<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">DatabasProjekt</string>
    <string name="hello_world">Hello world!</string>
    <string name="button_cont">Continue</string>
    <string name="ArriveAt">Arrive at</string>
    <string name="NumberOfTravelers">Number of travelers</string>
    <string name="Date">Date</string>
    <string name="Departure">Departure</string>
    <string name="ButtonSearch">Search</string>
    <string name="action_settings">Settings</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="departFrom">Depart from</string>
    <string name="arriveAt">Arrive at</string>
    <string name="welcome">"Welcome to</string>
    <string name="blomster">" Blomstermåla Bus"</string>
    <string name="Confirmation">Confirmation</string>
    <string name="Buss_ID">BussID</string>
    <string name="Depart">Depart</string>
    <string name="Price">Price</string>

</resources>
